k8s/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  annotations:
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:992382731666:certificate/17a702cc-e3fb-4af2-a562-e7c88f95d9dd
#    alb.ingress.kubernetes.io/listen-ports: '[{HTTPS:443}]'
#    alb.ingress.kubernetes.io/scheme: internet-facing
    cert-manager.io/issuer: letsencrypt-http01-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.cm-yarmoshyk.com
      secretName: dev-cm-yarmoshyk-com-key-pair
  rules:
    - host: dev.cm-yarmoshyk.com
      http:
        paths:
          - backend:
              service:
                name: cm-cluster-ip-service
                port:
                  number: 80
            pathType: Prefix
            path: /
